--------------------------------------------------------------------------------------------------
Release notes version 1.7.7_beta : Enhancements, modifications and corrected bugs since version 1.7.6 :
--------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------
Release notes version 1.7.6 : Enhancements, modifications and corrected bugs since version 1.7.5 :
--------------------------------------------------------------------------------------------------
26/10/17 (TRUST)  New feature : Possibility to write a MED file in the last major version of MED file format with keyword 'med_major'
20/10/17 (TRUST)  New keyword : Delta tolerance on mass fractions for check testing in state law for mixing of perfect gas (dtol_fraction)
18/10/17 (TRUST)  New keyword : Add quiet option in k-eps RANS turbulence model to disable printing of information about k and epsilon
11/10/17 (TRUST)  New keyword : Upper limitation of epsilon for k-eps RANS turbulence model (eps_max)
26/09/17 (TRUST)  Major change: Adding columns into diffusion_chaleur.face (and debit.face into VDF) files for flux by face using imprimer_flux keyword
12/09/17 (TRUST)  Minor change: Value of ideal gas constant in Quasi_Compressible model R=8.3143J/mol/K
31/08/17 (TRUST)  New feature : Introduce no_verify option (Usage: trust MyJDD.data -no_verify)
21/08/17 (TRUST)  Validation  : Blocking turbulent quasi-compressible calculation with mass fraction in VEF
29/06/17 (TRUST)  Bug fixed   : Taking into account the name of the thermal power defined by Champ_Input_P0
--------------------------------------------------------------------------------------------------
Release notes version 1.7.5 : Enhancements, modifications and corrected bugs since version 1.7.4 :
--------------------------------------------------------------------------------------------------