@@ -352,28 +352,6 @@ dt_calc_dt_calc dt_start dt_calc 0 The time step at first iteration is calculate
 dt_calc_dt_min dt_start dt_min 0 The first iteration is based on dt_min.
 dt_calc_dt_fixe dt_start dt_fixe 0 The first time step is fixed by the user (recommended when restarting calculation with Crank Nicholson temporal scheme to ensure continuity).
   attr value floattant value 0 first time step.
-schema_temps_base objet_u schema_temps_base -1 Basic class for time schemes. This scheme will be associated with a problem and the equations of this problem.
-  attr tinit floattant tinit 1 Value of initial calculation time (0 by default).
-  attr tmax floattant tmax 1 Time during which the calculation will be stopped (1e30s by default).
-  attr tcpumax floattant tcpumax 1 CPU time limit (must be specified in hours) for which the calculation is stopped (1e30s by default).
-  attr dt_min floattant dt_min 1 Minimum calculation time step (1e-16s by default).
-  attr dt_max floattant(min=0) dt_max 1 Maximum calculation time step (1e30s by default).
-  attr facsec floattant facsec 1 Value assigned to the safety factor for the time step (1. by default). The time step calculated is multiplied by the safety factor. The first thing to try when a calculation does not converge with an explicit time scheme is to reduce the facsec to 0.5. NL2 Warning: Some schemes needs a facsec lower than 1 (0.5 is a good start), for example Schema_Adams_Bashforth_order_3
-  attr nb_pas_dt_max entier nb_pas_dt_max 1 Maximum number of calculation time steps (1e9 by default).
-  attr dt_sauv floattant dt_sauv 1 Save time step value (1e30s by default). Every dt_sauv, fields are saved in the .sauv file. The file contains all the information saved over time. If this instruction is not entered, results are saved only upon calculation completion.
-  attr dt_impr floattant dt_impr 1 Scheme parameter printing time step in time (1e30s by default). The time steps and the flux balances are printed (incorporated onto every side of processed domains) into the .out file.
-  attr dt_start dt_start dt_start 1 dt_min : the first iteration is based on dt_min NL2 dt_start dt_calc : the time step at first iteration is calculated in agreement with CFL condition. NL2 dt_start dt_fixe value : the first time step is fixed by the user (recommended when restarting calculation with Crank Nicholson temporal scheme to ensure continuity). NL2 By default, the first iteration is based on dt_calc.
-  attr seuil_statio floattant seuil_statio 1 Value of the convergence threshold (1e-12 by default). Problems using this type of time scheme converge when the derivatives dGi/dt NL1 of all the unknown transported values Gi have a combined absolute value less than this value. This is the keyword used to set the permanent rating threshold.
-  attr seuil_statio_relatif_deconseille entier(into=[0,1]) seuil_statio_relatif_deconseille 1 not_set
-  attr diffusion_implicite entier(into=[0,1]) diffusion_implicite 1 Keyword to make the diffusion term in the Navier Stokes equation implicit (in this case, vrel should be set to 1). The stability time step is then only based on the convection time step (dt=facsec*dt_convection). Thus, in some circumstances, an important gain is achieved with respect to the time step (large diffusion with respect to convection on tightened meshes). Caution: It is however recommended that the user should avoid exceeding the calculation convection time step by selecting a facsec that is too large. Start with a facsec of 1 and then increase this gradually if you wish to accelerate calculation. In addition, for a natural convection calculation with a zero initial speed, in the first time step, the convection time is infinite and therefore dt=facsec*dt_max.
-  attr niter_max_diffusion_implicite entier niter_max_diffusion_implicite 1 This keyword changes the default value (number of unknowns) of the maximal iterations number in the conjugate gradient method used for implicit diffusion.
-  attr seuil_diffusion_implicite floattant seuil_diffusion_implicite 1 This keyword changes the default value (1e-6) of convergency criteria for the resolution by conjugate gradient used for implicit diffusion.
-  attr impr_diffusion_implicite entier(into=[0,1]) impr_diffusion_implicite 1 Unactivate (default) or not the printing of the convergence during the resolution of the conjugate gradient.
-  attr precision_impr entier precision_impr 1 Optional keyword to define the digit number for flux values printed into .out files (by default 3).
-  attr no_error_if_not_converged_diffusion_implicite entier(into=[0,1]) no_error_if_not_converged_diffusion_implicite 1 not_set
-  attr no_conv_subiteration_diffusion_implicite entier(into=[0,1]) no_conv_subiteration_diffusion_implicite 1 not_set
-  attr periode_sauvegarde_securite_en_heures entier periode_sauvegarde_securite_en_heures 1 To change the default period (23 hours) between the save of the fields in .sauv file.
-  attr no_check_disk_space rien no_check_disk_space 1 To disable the check of the available amount of disk space during the calculation.
 euler_scheme schema_temps_base schema_euler_explicite -1 This is the Euler explicite scheme.
 schema_predictor_corrector schema_temps_base schema_predictor_corrector -1 This is the predictor-corrector scheme (second order). It is more accurate and economic than MacCormack scheme. It gives best results with a second ordre convective scheme like quick, centre (VDF).
 solveur_implicite_base objet_u solveur_implicite_base -1 Class for solver in the situation where the time scheme is the implicit scheme. Solver allows equation diffusion and convection operators to be set as implicit terms.
