@@ -36,6 +36,7 @@
 #include <Journal.h>
 
 Implemente_base_sans_constructeur(Schema_Temps_base,"Schema_Temps_base",Objet_U);
+// XD schema_temps_base objet_u schema_temps_base -1 Basic class for time schemes. This scheme will be associated with a problem and the equations of this problem.
 
 void Schema_Temps_base::initialize()
 {
@@ -324,31 +325,31 @@ void Schema_Temps_base::associer_pb(const Probleme_base& un_probleme)
 
 void Schema_Temps_base::set_param(Param& param)
 {
-  param.ajouter("tinit",&tinit_);
-  param.ajouter( "tmax",&tmax_);
-  param.ajouter_non_std( "tcpumax",(this));
-  param.ajouter( "dt_min",&dt_min_);
-  param.ajouter( "dt_max",&dt_max_);
-  param.ajouter( "dt_sauv",&dt_sauv_);
-  param.ajouter( "dt_impr",&dt_impr_);
-  param.ajouter( "facsec",&facsec_);
-  param.ajouter( "seuil_statio",&seuil_statio_);
-  param.ajouter( "seuil_statio_relatif_deconseille",&seuil_statio_relatif_deconseille_);
-  param.ajouter( "diffusion_implicite",&ind_diff_impl_);
-  param.ajouter( "seuil_diffusion_implicite",&seuil_diff_impl_);
-  param.ajouter( "impr_diffusion_implicite",&impr_diff_impl_);
-  param.ajouter( "no_error_if_not_converged_diffusion_implicite",&no_error_if_not_converged_diff_impl_);
-  param.ajouter( "no_conv_subiteration_diffusion_implicite",&no_conv_subiteration_diff_impl_);
-  param.ajouter_non_std( "dt_start",(this));
+  param.ajouter("tinit",&tinit_); // XD_ADD_P double Value of initial calculation time (0 by default).
+  param.ajouter( "tmax",&tmax_); // XD_ADD_P double Time during which the calculation will be stopped (1e30s by default).
+  param.ajouter_non_std( "tcpumax",(this)); // XD_ADD_P double CPU time limit (must be specified in hours) for which the calculation is stopped (1e30s by default).
+  param.ajouter( "dt_min",&dt_min_); // XD_ADD_P double Minimum calculation time step (1e-16s by default).
+  param.ajouter( "dt_max",&dt_max_); // XD_ADD_P double Maximum calculation time step (1e30s by default).
+  param.ajouter( "dt_sauv",&dt_sauv_); // XD_ADD_P double Save time step value (1e30s by default). Every dt_sauv, fields are saved in the .sauv file. The file contains all the information saved over time. If this instruction is not entered, results are saved only upon calculation completion. To disable the writing of the .sauv files, you must specify 0.
+  param.ajouter( "dt_impr",&dt_impr_); // XD_ADD_P double Scheme parameter printing time step in time (1e30s by default). The time steps and the flux balances are printed (incorporated onto every side of processed domains) into the .out file.
+  param.ajouter( "facsec",&facsec_); // XD_ADD_P double Value assigned to the safety factor for the time step (1. by default). The time step calculated is multiplied by the safety factor. The first thing to try when a calculation does not converge with an explicit time scheme is to reduce the facsec to 0.5. NL2 Warning: Some schemes needs a facsec lower than 1 (0.5 is a good start), for example Schema_Adams_Bashforth_order_3.
+  param.ajouter( "seuil_statio",&seuil_statio_); // XD_ADD_P double Value of the convergence threshold (1e-12 by default). Problems using this type of time scheme converge when the derivatives dGi/dt NL1 of all the unknown transported values Gi have a combined absolute value less than this value. This is the keyword used to set the permanent rating threshold.
+  param.ajouter( "seuil_statio_relatif_deconseille",&seuil_statio_relatif_deconseille_); // XD_ADD_P int not_set
+  param.ajouter( "diffusion_implicite",&ind_diff_impl_); // XD_ADD_P int Keyword to make the diffusion term in the Navier Stokes equation implicit (in this case, vrel should be set to 1). The stability time step is then only based on the convection time step (dt=facsec*dt_convection). Thus, in some circumstances, an important gain is achieved with respect to the time step (large diffusion with respect to convection on tightened meshes). Caution: It is however recommended that the user should avoid exceeding the calculation convection time step by selecting a facsec that is too large. Start with a facsec of 1 and then increase this gradually if you wish to accelerate calculation. In addition, for a natural convection calculation with a zero initial speed, in the first time step, the convection time is infinite and therefore dt=facsec*dt_max.
+  param.ajouter( "seuil_diffusion_implicite",&seuil_diff_impl_); // XD_ADD_P double This keyword changes the default value (1e-6) of convergency criteria for the resolution by conjugate gradient used for implicit diffusion.
+  param.ajouter( "impr_diffusion_implicite",&impr_diff_impl_); // XD_ADD_P int Unactivate (default) or not the printing of the convergence during the resolution of the conjugate gradient.
+  param.ajouter( "no_error_if_not_converged_diffusion_implicite",&no_error_if_not_converged_diff_impl_); // XD_ADD_P int not_set
+  param.ajouter( "no_conv_subiteration_diffusion_implicite",&no_conv_subiteration_diff_impl_); // XD_ADD_P int not_set
+  param.ajouter_non_std( "dt_start",(this)); // XD attr dt_start dt_start dt_start 1 dt_start dt_min : the first iteration is based on dt_min. NL2 dt_start dt_calc : the time step at first iteration is calculated in agreement with CFL condition. NL2 dt_start dt_fixe value : the first time step is fixed by the user (recommended when restarting calculation with Crank Nicholson temporal scheme to ensure continuity). NL2 By default, the first iteration is based on dt_calc.
   // param.ajouter( "nb_pas_dt_max",&nb_pas_dt_max_);
   // nb_pas_dt_max non standard pour valgrind
-  param.ajouter_non_std( "nb_pas_dt_max",(this));
-  param.ajouter( "niter_max_diffusion_implicite",&niter_max_diff_impl_);
-  param.ajouter( "precision_impr",&precision_impr_);
-  param.ajouter_non_std( "periode_sauvegarde_securite_en_heures",(this));
-  param.ajouter_non_std( "no_check_disk_space",(this));
-  param.ajouter_flag( "disable_progress",&disable_progress_);
-  param.ajouter_flag( "disable_dt_ev",&disable_dt_ev_);
+  param.ajouter_non_std( "nb_pas_dt_max",(this)); // XD_ADD_P int Maximum number of calculation time steps (1e9 by default).
+  param.ajouter( "niter_max_diffusion_implicite",&niter_max_diff_impl_); // XD_ADD_P int This keyword changes the default value (number of unknowns) of the maximal iterations number in the conjugate gradient method used for implicit diffusion.
+  param.ajouter( "precision_impr",&precision_impr_); // XD_ADD_P int Optional keyword to define the digit number for flux values printed into .out files (by default 3).
+  param.ajouter_non_std( "periode_sauvegarde_securite_en_heures",(this)); // XD_ADD_P int To change the default period (23 hours) between the save of the fields in .sauv file.
+  param.ajouter_non_std( "no_check_disk_space",(this)); // XD_ADD_P flag To disable the check of the available amount of disk space during the calculation.
+  param.ajouter_flag( "disable_progress",&disable_progress_); // XD_ADD_P flag To disable the writing of the .progress file.
+  param.ajouter_flag( "disable_dt_ev",&disable_dt_ev_); // XD_ADD_P flag To disable the writing of the .dt_ev file.
 }
 // Description:
 //    Surcharge Objet_U::printOn(Sortie&)
